--- a/style.css
+++ b/style.css
@@ -26,6 +26,6 @@ h1>a:hover,h2>a:hover,h3>a:hover,h4>a:hover,h5>a:hover,h6>a:hover{
     font-weight:bold;
     border:dotted thin;
 }
-#posts  time {
-	float:right;
+#posts{
+    width:100%;
 }
