nvim-lsp published

--- a/style.css
+++ b/style.css
@@ -31,5 +31,5 @@ h1>a:hover,h2>a:hover,h3>a:hover,h4>a:hover,h5>a:hover,h6>a:hover{
     width:100%;
 }
 pre{
-    overflow:auto;
+    overflow:auto hidden;
 }
