added padding to css.

--- a/style.css
+++ b/style.css
@@ -1,9 +1,10 @@
 @import url('lm.css');
-@import url('bw.css');
+@import url('mk.css');
 body{
   color: white;
   background: black;
   font-family: sans-serif;
+  padding:2em;
 }
 a{
   color:#01d107;
